--- a/aGTS/res/values/gtsvalues.xml
+++ b/aGTS/res/values/gtsvalues.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="account">sysop</string>
+<string name="account">test</string>
+<string name="server">www.dantek-gpstrack.ro</string>
 </resources>
